fix scrollbars, relative width of .container to fit large screens

--- a/tigerlilly_site/static/tigerlilly_site/style/MOBILE_home.css
+++ b/tigerlilly_site/static/tigerlilly_site/style/MOBILE_home.css
@@ -6,7 +6,6 @@
 
 .col {
 	max-width:49%;
-	overflow-x:hidden;
 }
 
 .row {
@@ -16,4 +15,5 @@
 .article > p {
     max-width:inherit;
     word-break:break-word;
+    overflow:hidden;
 }
