--- a/tigerlilly_site/static/tigerlilly_site/style/PC_home.css
+++ b/tigerlilly_site/static/tigerlilly_site/style/PC_home.css
@@ -1,15 +1,17 @@
 .container {
-	width:85%;
+	max-width:82.5%;
 	float:left;
 	margin-left:7px;
 }
 
 .col {
 	max-width:20%;
-	overflow-x:hidden;
 }
 
 .article > p {
     max-width:inherit;
     word-break:break-word;
+    padding:0px;
+    margin:0px;
+    overflow:hidden;
 }
