--- a/tigerlilly_site/static/tigerlilly_site/style/global.css
+++ b/tigerlilly_site/static/tigerlilly_site/style/global.css
@@ -4,7 +4,6 @@ body {
 	background: #f0e68c none no-repeat scroll center center;
 	padding: 0 1px 40px 1px;
 	width:100%;
-	overflow-x:hidden;
 }
 
 #title {
